<resources>
    <string name="app_name">Jarrebbnnee</string>
    <string name="signup"><u>SIGN UP TODAY</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="facebook_app_id">340289089699707</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fb_login_protocol_scheme">fb340289089699707</string>
    <string name="fbParamEmail">email</string>
    <string name="bags">Bags &amp; Shoes</string>
    <string name="ViewDetails"><u>View Details</u></string>
    <string name="action_settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="loginRegister">LOGIN / REGISTER</string>

    <string name="shopF">SHOP FOR</string>
    <string name="priceD">Price Details</string>
    <string name="subtotal">Subtotal</string>
    <string name="Tax">Tax</string>
    <string name="Total">Total</string>
    <string name="CHECKOUT">CHECKOUT</string>
    <string name="continueS">CONTINUE SHOPPING</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="mobile">Contact number</string>
    <string name="Address">Address</string>
    <string name="Security">Security Code</string>
    <string name="Cant">Can\'t read the above security code?</string>
    <string name="Refresh">Refresh</string>
    <string name="Accept">Accept</string>
    <string name="terms">Terms and Condition</string>
    <string name="signUp">SIGN UP</string>
    <string name="latestC">Latest Classifieds</string>
    <string name="VIEW">VIEW ALL</string>
    <string name="latestP">Latest Products</string>
    <string name="Sort">Sort</string>
    <string name="Filter">Filter</string>
    <string name="Billing">Billing Information</string>
    <string name="Country">Country</string>
    <string name="StateProvince">State/Province</string>
    <string name="City">City</string>
    <string name="Zip">Zip/Postal Code</string>
    <string name="Address1">Address Line 1</string>
    <string name="Address2">Address Line 2</string>
    <string name="ShipT">Ship to this Address</string>
    <string name="ShipO">Ship to different Address</string>
    <string name="payment">PROCEED TO PAYMENT</string>
</resources>
