<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="7dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cart_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:paddingLeft="7dp"
            android:text="@string/priceD"
            android:textColor="@color/productTitle"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/full_border"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cart_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingLeft="7dp"
                    android:text="@string/subtotal"
                    android:textColor="@color/productTitle"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_cart_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:paddingRight="7dp"
                    android:text="sds"
                    android:textColor="@color/productTitle"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:background="@drawable/full_border">

                <TextView
                    android:id="@+id/tv_cart_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingLeft="7dp"
                    android:text="@string/Tax"
                    android:textColor="@color/productTitle"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_cart_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:paddingRight="7dp"
                    android:text="$0.00"
                    android:textColor="@color/productTitle"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cart_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingLeft="7dp"
                    android:text="@string/Total"
                    android:textColor="@color/bottomMenuInactive"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_cart_7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="right"
                    android:paddingRight="7dp"
                    android:text="sds"
                    android:textColor="@color/bottomMenuInactive"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_cart_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/CHECKOUT"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


        <Button
            android:id="@+id/btn_cart_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/bottomMenuInactive"
            android:padding="7dp"
            android:text="@string/continueS"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


    </LinearLayout>

</LinearLayout>
